Create ServiceWorkerRequestHandler for ExternalFileScheme

When a file in Drive is opened from ChromeOS Files app, Chrome opens
"externalfile" scheme URL. And ExternalFileURLRequestJob redirects the request
to the Drive's HTTPS URL.

Currently ServiceWorkerRequestHandler::InitializeForNavigation() doesn't create
a ServiceWorkerProviderHost for the "externalfile" scheme URL.
So ServiceWorkerProviderHost is not created during the navigation.

A new ServiceWorkerProviderHost will be created when ServiceWorkerDispatcherHost
receives OnProviderCreated() IPC from the renderer process.
https://chromium.googlesource.com/chromium/src/+/86ff9bc/content/browser/service_worker/service_worker_dispatcher_host.cc#355

But SetDocumentUrl() of the ServiceWorkerProviderHost which is created here will
not be called because the navigation is already finished.
So all ServiceWorker related API in the page will fail with
"No URL is associated with the caller's document." error.

Bug: 776408
Change-Id: Ic4a0cd2ec5fb16ff995fb96927ca3fea61c3359a
Reviewed-on: https://chromium-review.googlesource.com/861558
Commit-Queue: Tsuyoshi Horo <horo@chromium.org>
Reviewed-by: Matt Falkenhagen <falken@chromium.org>
Cr-Commit-Position: refs/heads/master@{#528590}